@@ -4392,4 +4392,13 @@
     ** Failers
     ab  
 
+/X$/E
+    X
+    ** Failers 
+    X\n 
+
+/X$/
+    X
+    X\n 
+
 / End of testinput7 /
