@@ -44,6 +44,9 @@ Version 7.9 xx-xxx-09
     
 9.  If auto-callout was enabled in a pattern with a conditional group, PCRE 
     could crash during matching.
+    
+10. The PCRE_DOLLAR_ENDONLY option was not working when pcre_dfa_exec() was 
+    used for matching. 
       
 
 Version 7.8 05-Sep-08
